err/youtube-song-downloader.err
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './etc/bash_completion.d'...
Listing './etc/fish'...
Listing './etc/fish/completions'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/apiclient'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/google_api_python_client-1.6.4.dist-info'...
Listing './lib/python3.5/site-packages/googleapiclient'...
Listing './lib/python3.5/site-packages/googleapiclient/discovery_cache'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/oauth2client'...
Listing './lib/python3.5/site-packages/oauth2client/contrib'...
Listing './lib/python3.5/site-packages/oauth2client/contrib/django_util'...
Listing './lib/python3.5/site-packages/oauth2client-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pluggy'...
Listing './lib/python3.5/site-packages/pluggy-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1_modules'...
Listing './lib/python3.5/site-packages/pyasn1_modules-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/pytest-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/rsa'...
Listing './lib/python3.5/site-packages/rsa-3.4.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/uritemplate'...
Listing './lib/python3.5/site-packages/uritemplate-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/youtube_dl'...
Listing './lib/python3.5/site-packages/youtube_dl/downloader'...
Listing './lib/python3.5/site-packages/youtube_dl/extractor'...
Listing './lib/python3.5/site-packages/youtube_dl/postprocessor'...
Listing './lib/python3.5/site-packages/youtube_dl-2017.12.31.dist-info'...
Listing './lib/python3.5/site-packages/youtube_song_downloader-1.0.egg-info'...
Listing './lib/python3.5/site-packages/ytsdl'...
Compiling './lib/python3.5/site-packages/ytsdl/cli.py'...
***   File "./lib/python3.5/site-packages/ytsdl/cli.py", line 23
    print "The download location was changed to: " + path
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ytsdl/songDownloader.py'...
***   File "./lib/python3.5/site-packages/ytsdl/songDownloader.py", line 43
    print "The specified save directory " + self.settings["saveDirectory"] + " does not exist!"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/doc'...
Listing './share/doc/youtube_dl'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
